--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -12,6 +12,7 @@
     float: left;
     display: block;
     width: 20%;
+    overflow: hidden;
 }
 
 .tabs li::after {
@@ -34,7 +35,7 @@
 
 .tabs label {
     display: block;
-    padding: 0 2rem 0 1rem;
+    padding: 0 25px 0 10px;
     border-radius: 4px 4px 0 0;
     border-width: 2px 2px 0 2px;
     /*font-size: 1rem;*/
@@ -68,7 +69,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 2rem;
+    width: 25px;
     height: 1.8rem;
     text-align: center;
     background: none;
@@ -98,8 +99,9 @@
 .tabs .tab-state:checked + label {
     top: 0;
     background: #272822;
-    border-left: solid 3px #09c;
+    border-left: solid 3px #069;
     color: #dedede;
+    padding-left: 7px;
 }
 
 .tabs .tab-state:checked ~ .tab-content {
